# exercises

./: .gitignore  README.md
algorithms/.ropeproject/: globalnames
algorithms/bitshack/: bitcount.c
algorithms/dynamic/: lis.py
algorithms/graphs/: search.c  test.gyp
algorithms/hash/: hash.py
algorithms/lists/: list.py
algorithms/primes/: primes.py
algorithms/queues/: two-stacks.py
algorithms/sort/: heap_sort.py  heapsort.py  merge_sort.py  qsort1a.py  quick_sort.py
algorithms/stacks/: balanced-syms.py  stack.c  stack.py
c/: cat.c  readlines.c  strings.c
c++/: bitset.cpp  conv_ctor.cpp  split_fields.cpp
c++/boost_threads_eg1/: .hg_archival.txt  Jamroot  README  t1.cpp  t3.cpp  t5.cpp
c++/containers/: map.cpp
c++/dynamicComponent/: Makefile  component2.cpp  main.cpp
c++/extenObj/: IMsgExtension.h  IMsgExtensionXMLSerializer.h  Makefile  Msg.cpp  Msg.gcda  Msg.gcno  Msg1.h  Msg1ExtensionXMLSerializer.cpp  Msg1ExtensionXMLSerializer.h  Msg2.gcda  Msg2.gcno  Msg2.h  Msg2ExtensionXMLSerializer.cpp  Msg2ExtensionXMLSerializer.gcda  atomicity.h.gcov  (+11 more)
c-sockets/: echo-client.c  echo-server.c
gconf/: Makefile  main.cpp
languages/: almost_sorted.py
languages/c++/double_dispatch1/: CMakeLists.txt  main.cpp
linux_admin/: dir-of-script.sh  handle-sigterm.sh  logrotate.conf  read_lines_from_file.sh
linux_api/: README
makefile/: Makefile.dirs  Makefile.self_leaf
python/: all-unique.py  array_rotation.py  binary-gap.py  char_in_both_strings.py  compare-the-triplets.py  context-manager.py  decorator.py  dict_from_tuples.py  dup_users.py  equi-point.py  exercise1.py  exercise2.py  fill_area.py  filter-file-using-gens.py  find_anagrams_in_string.py  find_battleship.py  finding-the-percentage.py  gap-in-numbers.py  gfind.py  import_char_in_both_strings.py  movies_network.py  palindrome.py  plug_adapter.py  product.py  ransom_note.py  regex.py  repr_vs_str.txt  score.py  subproc.py  translate-delete-chars.py  tuples.py
python/swig/: CMakeLists.txt  Class1.cpp  Class1.h
shell/: eat_arg.sh
(+268 files in other folders)
